# forum-django

./: .flake8  Dockerfile  docker-compose.yml  pyproject.toml  runserver.sh
.devcontainer/: Dockerfile  devcontainer.json
forum/: .mypy.ini  db.sqlite3  pytest.ini
forum/_tests/integration/topic/: conftest.py  test_post_api.py  test_topic_api.py
forum/_tests/integration/user/: test_user_api.py
forum/_tests/unit/: conftest.py
forum/_tests/unit/topic/: conftest.py  test_post_services.py  test_topic_services.py
forum/_tests/unit/user/: test_user_service.py
forum/_tools/parser/: http.py
forum/_tools/validator/: auxiliar.py  fns.py  message_error.py
forum/authentication/: models.py  urls.py  views.py
forum/authentication/migrations/: 0001_initial.py
forum/authentication/services/: auth.py
forum/authentication/templates/: login.html  register.html
forum/forum/: asgi.py  settings.py  urls.py  wsgi.py
forum/tests/integration/user/: test_user_api.py
forum/tests/unit/user/: test_user_service.py
forum/topic/: admin.py  models.py  urls.py  views.py
forum/topic/migrations/: 0001_initial.py  0002_auto_20210919_1633.py  0002_auto_20210927_2226.py  0003_topicmodel_content.py  0004_alter_postmodel_topic.py  0005_auto_20210929_2319.py  0006_topicmodel_created_at.py
forum/topic/services/: __init__.py  forum.py  post.py  topic.py
forum/topic/static/: home.css  style.css  topic.css
forum/topic/templates/: home.html  post.html  topic.html  topic_create.html
