
[tool.poetry]
name = "forum"
version = "0.1.0"
description = ""
authors = ["LeeJun"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
pytest-django = "^4.4.0"
black = "^21.9b0"
autopep8 = "^1.5.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
